# chat_console

./: CMakeLists.txt  README.md  client.cpp  client.hpp  client_user.hpp  functions.cpp  main.cpp  server.hpp  text.hpp  user.cpp  user.hpp
Client_TCP/: CMakeLists.txt  client.cpp  client.hpp  client_TCP.cpp  client_TCP.hpp  main.cpp  transmitter.cpp  transmitter.hpp
Server_TCP/: CMakeLists.txt  User_db.hpp  client.cpp  client.hpp  main.cpp  receiver.cpp  receiver.hpp  server_TCP.cpp  server_TCP.hpp  user.cpp  user.hpp  virtual_client.cpp  virtual_client.hpp
headers/: client.hpp  functions.hpp  include.hpp  server.hpp  text.hpp  user.hpp
